# toarray

./: .gitignore  CHANGELOG_IMPROVEMENTS.md  EXAMPLES.md  IMPROVEMENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
tests/: test_arrow.py  test_memory.py  test_numpy.py  test_performance.py  test_policy.py  test_stream.py  test_toarray.py
toarray/: __init__.py  arrow_compat.py  iterable_to_array.py  memory.py  numpy_compat.py
