[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toarray"
version = "0.3.2"
description = "Small Python package for converting iterables to arrays."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Odos Matthews", email = "odosmatthews@gmail.com" }]
urls = { "Homepage" = "https://github.com/eddiethedean/toarray" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
  "ruff>=0.6",
  "black>=24.0",
  "mypy>=1.0",
  "numpy>=1.24",
  "pyarrow>=12",
]
numpy = [
  "numpy>=1.24"
]
arrow = [
  "pyarrow>=12"
]

[tool.pytest.ini_options]
addopts = "-q --cov=toarray --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
strict_optional = true

